Verify GITHUB_RUN_ID and GITHUB_RUN_NUMBER

--- a/.github/workflows/create-self-hosted-runner.yml
+++ b/.github/workflows/create-self-hosted-runner.yml
@@ -14,5 +14,5 @@ jobs:
       run: echo Hello, world!
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        echo "GITHUB_RUN_ID: $GITHUB_RUN_ID ",
+        echo "GITHUB_RUN_NUMBER: $GITHUB_RUN_NUMBER "
