--- a/.github/workflows/create-self-hosted-runner.yml
+++ b/.github/workflows/create-self-hosted-runner.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 jobs:
-  logLatestRelease:
+  createSelfHostedRunner:
     runs-on: ubuntu-latest
     steps:
       - uses: octokit/request-action@v2.x
