Revised GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    steps:
+    steps:  
     - uses: actions/checkout@v2
     - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo "GITHUB_RUN_ID: $GITHUB_RUN_ID ",
-        echo "GITHUB_RUN_NUMBER: $GITHUB_RUN_NUMBER "
+      run: ls -l
