Added test scenairo for GitHub Runner on Azure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         az logout
   test:
     runs-on: self-hosted, Azure
+    needs: deploy
 
     steps: 
     - name: "Test GitHub Runner on Azure"
