--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -10,7 +10,7 @@ jobs:
     steps:  
       - name: "Test GitHub Runner on Azure"
       run:  |
-        echo $BASE_NAME
+        echo "Something..."
   
-env:
-  BASE_NAME: "github-runner-${{ github.run_number }}"	
+#env:
+#  BASE_NAME: "github-runner-${{ github.run_number }}"	
