--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -10,4 +10,8 @@ jobs:
     steps:  
       - name: "Test GitHub Runner on Azure"
         run:  |
-            echo "Something..."
+            echo "BASE_NAME: $BASE_NAME"
+            echo $BASE_NAME
+
+env:
+  BASE_NAME: "github-runner-${{ github.run_number }}"	
