--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy GitHub Runner to Azure
 
 on:
   repository_dispatch:
-    types: [deploy]
+    types: deploy
   
 env:
   BASE_NAME: "github-runner-${{ github.run_number }}"	
