--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 name: Deploy GitHub Runner to Azure
 
 on:
-  repository_dispatch:
-    types: deploy
+  repository_dispatch
   
 env:
   BASE_NAME: "github-runner-${{ github.run_number }}"	
