--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -3,9 +3,6 @@ name: Foo
 on:
   repository_dispatch
 
-env:
-  BASE_NAME: "github-runner-${{ github.run_number }}"	
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,6 +10,11 @@ jobs:
     steps:  
       - name: "Foo"
         run:  |
-            BLUE="\033[0;34m"
-            C="\033[0m" # No Color
-            echo -e "${BLUE}Foo...${NC}"
+            echo -e "${BLUE}${BASE_NAME}${NC}"
+    env:
+      BASE_NAME: "Foo-${{ github.run_number }}"	
+          
+env:
+  BLUE: '\033[0;34m'
+  NC: '\033[0m' # No Color
+  
