--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,25 +16,25 @@ jobs:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: "Create resource group"
       run:  |
+        echo ${RG_NAME} $RG_NAME
         az group create --location ${LOCATION} --name ${RG_NAME}
 
     env:
-      BASE_NAME: "github-runner-${{github.GITHUB_RUN_NUMBER}}"	
-      RG_NAME: ${BASE_NAME}
+      RG_NAME: "github-runner-${{github.GITHUB_RUN_NUMBER}}"
       LOCATION: "WestEurope"
-      ACR_NAME: ${BASE_NAME}
+      ACR_NAME: "${RG_NAME}ACR"
       RUNNER_IMAGE_SOURCE: "docker.io/myoung34/github-runner:latest"
       RUNNER_IMAGE: "github-runner"
       RUNNER_IMAGE_TAG: ${{github.GITHUB_RUN_NUMBER}}
-      VM_NAME: "${BASE_NAME}"
+      VM_NAME: "${RG_NAME}VM"
       VM_IMAGE: "UbuntuLTS"
-      VM_ADMIN: ${BASE_NAME}
+      VM_ADMIN: ${RG_NAME}
       VM_EXT_NAME: "customScript"
       VM_EXT_PUBLISHER: "Microsoft.Azure.Extensions"
       VM_EXT_FILE_URIS: "'https://raw.githubusercontent.com/${{github.GITHUB_REPOSITORY}}/master/install-docker.sh','https://raw.githubusercontent.com/${{github.GITHUB_REPOSITORY}}/master/install-github-runner.sh'"
-      NSG_NAME: "${BASE_NAME}NSG"
+      NSG_NAME: "${RG_NAME}NSG"
       NSG_RULE_NAME: "default-allow-ssh"
-      RUNNER_NAME: ${BASE_NAME}
+      RUNNER_NAME: ${RG_NAME}
       RUNNER_USER: ${VM_ADMIN}
       RUNNER_LABELS: "Azure"
       REPO_URL: "https://github.com/${{github.GITHUB_REPOSITORY}}"
