--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
 name: Deploy GitHub Runner to Azure
 
 on:
-  repository_dispatch
+#  repository_dispatch
+ push:
+    branches:
+      - master
 
 jobs:
   deploy:
