--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,21 +26,4 @@ jobs:
 
     env:
       RG_NAME: "github-runner-${{github.run_number}}"
-      LOCATION: "WestEurope"
-      ACR_NAME: "${RG_NAME}ACR"
-      RUNNER_IMAGE_SOURCE: "docker.io/myoung34/github-runner:latest"
-      RUNNER_IMAGE: "github-runner"
-      RUNNER_IMAGE_TAG: ${{github.GITHUB_RUN_NUMBER}}
-      VM_NAME: "${RG_NAME}VM"
-      VM_IMAGE: "UbuntuLTS"
-      VM_ADMIN: ${RG_NAME}
-      VM_EXT_NAME: "customScript"
-      VM_EXT_PUBLISHER: "Microsoft.Azure.Extensions"
-      VM_EXT_FILE_URIS: "'https://raw.githubusercontent.com/${{github.GITHUB_REPOSITORY}}/master/install-docker.sh','https://raw.githubusercontent.com/${{github.GITHUB_REPOSITORY}}/master/install-github-runner.sh'"
-      NSG_NAME: "${RG_NAME}NSG"
-      NSG_RULE_NAME: "default-allow-ssh"
-      RUNNER_NAME: ${RG_NAME}
-      RUNNER_USER: ${VM_ADMIN}
-      RUNNER_LABELS: "Azure"
-      REPO_URL: "https://github.com/${{github.GITHUB_REPOSITORY}}"
-      VM_EXT_COMMAND: "./install-docker.sh && ./install-github-runner.sh ${ACR_NAME} ${RUNNER_IMAGE} ${RUNNER_IMAGE_TAG} ${RUNNER_NAME} ${RUNNER_USER} ${{secrets.GH_TOKEN_REPO}} ${REPO_URL} ${RUNNER_LABELS}"
+      RG_LOCATION: "WestEurope"
