--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,5 @@ jobs:
         RG_NAME: "github-runner-${{github.run_number}}"
         RG_LOCATION: "WestEurope"
         GH_TOKEN: ${{secrets.GH_TOKEN_REPO}}
-        GH_REPOSITORY: $GITHUB_REPOSITORY
+        GH_REPOSITORY: ${{github.repository}}
     
