--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -1,4 +1,4 @@
-name: Deploy GitHub Runner to Azure
+name: Deploy as Docker container
 
 on:
 #  repository_dispatch
@@ -21,8 +21,8 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-          chmod +x $GITHUB_WORKSPACE/deploy.sh
-          $GITHUB_WORKSPACE/deploy.sh
+          chmod +x $GITHUB_WORKSPACE/docker/deploy.sh
+          $GITHUB_WORKSPACE/docker/deploy.sh
       env:
         RG_NAME: "github-runner-${{github.run_number}}"
         RG_LOCATION: "WestEurope"
