Changed trigger vm-deploy

--- a/.github/workflows/vm-deploy.yml
+++ b/.github/workflows/vm-deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy as VM
 
 on:
-#  repository_dispatch
- push:
-    branches:
-      - master
+  repository_dispatch
+# push:
+#    branches:
+#      - master
 
 jobs:
   deploy:
