Created vm deploy

--- a/.github/workflows/container-deploy.yml
+++ b/.github/workflows/container-deploy.yml
@@ -1,10 +1,7 @@
 name: Deploy as Container
 
 on:
-#  repository_dispatch
- push:
-    branches:
-      - master
+  repository_dispatch
 
 jobs:
   deploy:
