--- a/.github/workflows/vm-deploy.yml
+++ b/.github/workflows/vm-deploy.yml
@@ -2,9 +2,12 @@ name: Deploy as VM
 
 on:
   repository_dispatch
-# push:
-#    branches:
-#      - master
+  push:
+    branches:
+      - master
+    paths:
+      - '.github/workflows/vm-deploy.yml'
+      - 'vm/*'
 
 jobs:
   deploy:
